# rakka-inference

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  deny.toml  pyproject.toml  rustfmt.toml
.cargo/: config.toml
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  version-bump.yml
ai-skills/: README.md  plugin.json
crates/inference/: Cargo.toml  README.md
crates/inference-cli/: Cargo.toml  README.md
crates/inference-cli/src/: config.rs  lib.rs  main.rs  serve.rs
crates/inference-core/: Cargo.toml  README.md
crates/inference-core/src/: audio.rs  batch.rs  cost.rs  deployment.rs  error.rs  lib.rs  registry.rs  runner.rs  runtime.rs  tokens.rs
crates/inference-pipeline/: Cargo.toml  README.md
crates/inference-pipeline/src/: lib.rs
crates/inference-py-bindings/: Cargo.toml  README.md
crates/inference-py-bindings/src/: audio.rs  cluster.rs  config.rs  core.rs  errors.rs  lib.rs  runtime.rs
crates/inference-python-bridge/: Cargo.toml  README.md
crates/inference-python-bridge/src/: bridge.rs  lib.rs
crates/inference-remote-core/: Cargo.toml  README.md
crates/inference-remote-core/src/: backoff.rs  circuit_breaker.rs  classify.rs  engine.rs  http.rs  lib.rs  queue.rs  rate_limit.rs  retry.rs  session.rs  sse.rs  worker.rs
crates/inference-runtime/: Cargo.toml  README.md
crates/inference-runtime-anthropic/: Cargo.toml  README.md
crates/inference-runtime-anthropic/src/: config.rs  cost.rs  error.rs  lib.rs  runner.rs  wire.rs
crates/inference-runtime-assemblyai/: Cargo.toml  README.md
crates/inference-runtime-audio2face/: Cargo.toml  README.md
crates/inference-runtime-audio2face/src/: arkit.rs  config.rs  cost.rs  error.rs  lib.rs  runner.rs  wire.rs
crates/inference-runtime-audio2face/tests/: audio2face_grpc.rs
crates/inference-runtime-candle/: Cargo.toml  README.md
crates/inference-runtime-candle/src/: lib.rs
crates/inference-runtime-cudarc/: Cargo.toml  README.md
crates/inference-runtime-cudarc/src/: lib.rs
crates/inference-runtime-deepgram/: Cargo.toml  README.md
crates/inference-runtime-deepgram/src/: config.rs  cost.rs  error.rs  lib.rs  runner.rs  wire.rs
crates/inference-runtime-deepgram/tests/: deepgram_ws.rs
crates/inference-runtime-elevenlabs/: Cargo.toml  README.md
crates/inference-runtime-elevenlabs/src/: config.rs  cost.rs  error.rs  lib.rs  runner.rs  wire.rs
crates/inference-runtime-elevenlabs/tests/: elevenlabs_wiremock.rs  elevenlabs_ws.rs
crates/inference-runtime-gemini/: Cargo.toml  README.md
crates/inference-runtime-gemini-live/: Cargo.toml  README.md
crates/inference-runtime-gemini-live/src/: config.rs  cost.rs  error.rs  lib.rs  runner.rs  wire.rs
crates/inference-runtime-gemini-live/tests/: gemini_live_ws.rs
crates/inference-runtime-gemini/src/: config.rs  cost.rs  error.rs  lib.rs  runner.rs  wire.rs
crates/inference-runtime-kokoro/: Cargo.toml  README.md
crates/inference-runtime-kokoro/src/: config.rs  cost.rs  error.rs  lib.rs  runner.rs  wire.rs
crates/inference-runtime-kokoro/tests/: kokoro_smoke.rs
crates/inference-runtime-litellm/: Cargo.toml  README.md
crates/inference-runtime-litellm/src/: lib.rs
crates/inference-runtime-mistralrs/: Cargo.toml  README.md
crates/inference-runtime-mistralrs/src/: lib.rs
crates/inference-runtime-moss/: Cargo.toml  README.md
crates/inference-runtime-moss/src/: config.rs  cost.rs  error.rs  lib.rs  runner.rs  wire.rs
crates/inference-runtime-moss/tests/: moss_smoke.rs
crates/inference-runtime-openai/: Cargo.toml  README.md
crates/inference-runtime-openai-realtime/: Cargo.toml  README.md
crates/inference-runtime-openai-realtime/src/: config.rs  cost.rs  error.rs  lib.rs  runner.rs  wire.rs
crates/inference-runtime-openai-realtime/tests/: openai_realtime_ws.rs
crates/inference-runtime-openai-stt/: Cargo.toml  README.md
crates/inference-runtime-openai-stt/src/: config.rs  cost.rs  error.rs  lib.rs  runner.rs  wire.rs
crates/inference-runtime-openai-stt/tests/: stt_wiremock.rs
crates/inference-runtime-openai-tts/: Cargo.toml  README.md
crates/inference-runtime-openai-tts/src/: config.rs  cost.rs  error.rs  lib.rs  runner.rs  wire.rs
crates/inference-runtime-openai-tts/tests/: tts_wiremock.rs
crates/inference-runtime-openai/src/: config.rs  cost.rs  error.rs  lib.rs  runner.rs  wire.rs
crates/inference-runtime-ort/: Cargo.toml  README.md
crates/inference-runtime-ort/src/: config.rs  error.rs  generate.rs  infer.rs  lib.rs  runner.rs  sampling.rs  session.rs  tokenizer.rs  topology.rs
crates/inference-runtime-ort/tests/: config.rs  cpu_smoke.rs  textgen_smoke.rs
crates/inference-runtime-piper/: Cargo.toml  README.md
crates/inference-runtime-piper/src/: config.rs  error.rs  lib.rs  phoneme.rs  runner.rs  session.rs
crates/inference-runtime-piper/tests/: manifest_round_trip.rs  piper_smoke.rs
crates/inference-runtime-tensorrt/: Cargo.toml  README.md
crates/inference-runtime-tensorrt/src/: lib.rs
crates/inference-runtime-vllm/: Cargo.toml  README.md
crates/inference-runtime-vllm/src/: defaults.rs  engine.rs  hf_cache.rs  lib.rs  probe.rs
crates/inference-runtime-vllm/tests/: gpu_smoke.rs
crates/inference-runtime-whisper-local/: Cargo.toml  README.md
crates/inference-runtime-whisper-local/src/: audio_decode.rs  config.rs  error.rs  lib.rs  runner.rs  session.rs
crates/inference-runtime-whisper-local/tests/: audio_decode_round_trip.rs  whisper_smoke.rs
crates/inference-runtime-ws-core/: Cargo.toml  README.md
crates/inference-runtime-xtts/: Cargo.toml  README.md
crates/inference-testkit/: Cargo.toml  README.md
docs/: architecture.md  audio-modalities.md  feature-matrix.md  local-gemma.md  migrating-audio-modalities.md  rustakka-inference-architecture-v4.md
docs/reports/: audit-baseline.json
examples/gemma_bench/: Cargo.toml  README.md
examples/remote_only_demo/: Cargo.toml  README.md  demo.toml
examples/stt_whisper_local/: Cargo.toml  README.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+78 files in other folders)
