[workspace]
resolver = "2"
members = [
    "crates/inference-core",
    "crates/inference-runtime",
    "crates/inference-python-bridge",
    "crates/inference-remote-core",
    "crates/inference-runtime-vllm",
    "crates/inference-runtime-tensorrt",
    "crates/inference-runtime-ort",
    "crates/inference-runtime-candle",
    "crates/inference-runtime-cudarc",
    "crates/inference-runtime-mistralrs",
    "crates/inference-runtime-openai",
    "crates/inference-runtime-anthropic",
    "crates/inference-runtime-gemini",
    "crates/inference-runtime-litellm",
    "crates/inference-pipeline",
    "crates/inference-testkit",
    "crates/inference-cli",
    "crates/inference-py-bindings",
    "crates/inference",
    "xtask",
    "examples/remote_only_demo",
    "examples/gemma_bench",
]

[workspace.package]
version       = "0.8.0"
edition       = "2021"
rust-version  = "1.78"
license       = "Apache-2.0"
repository    = "https://github.com/rustakka/atomr-infer"
homepage      = "https://github.com/rustakka/atomr-infer"
documentation = "https://docs.rs/atomr-infer"
authors       = ["atomr-infer contributors"]
readme        = "README.md"
keywords      = ["llm", "inference", "atomr", "actor", "openai"]
categories    = ["concurrency", "asynchronous", "science"]

[workspace.dependencies]
# Async / runtime
tokio        = { version = "1.39", features = ["full"] }
tokio-util   = { version = "0.7", features = ["codec"] }
async-trait  = "0.1"
futures      = "0.3"
futures-util = "0.3"
futures-core = "0.3"
pin-project-lite = "0.2"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Concurrency primitives
parking_lot = "0.12"
arc-swap    = "1.7"
dashmap     = "6"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bytes      = "1"
toml       = "0.8"

# HTTP / web — for remote runtimes and ApiGatewayActor
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json", "stream"] }
hyper              = "1"
eventsource-stream = "0.2"
tower              = { version = "0.5", default-features = false, features = ["util", "limit", "retry", "timeout"] }
axum               = { version = "0.7", default-features = false, features = ["json", "http1", "http2", "tokio", "matched-path"] }

# Secrets — typed credentials from inference-core down
secrecy = "0.10"

# Error handling
thiserror = "1"
anyhow    = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Time / utility
url       = { version = "2", features = ["serde"] }
once_cell = "1"

# Testing
proptest = "1"
wiremock = "0.6"

# Python bindings (optional)
pyo3                 = { version = "0.22", default-features = false, features = ["macros"] }
pyo3-async-runtimes  = { version = "0.22", default-features = false, features = ["tokio-runtime"] }

# Sibling atomr workspace ---------------------------------------------------
# atomr is the actor-runtime substrate. The umbrella crate is
# published as `atomr` on crates.io.
atomr                  = { path = "../atomr/crates/atomr",                  version = "0.9.2" }
atomr-core             = { path = "../atomr/crates/atomr-core",             version = "0.9.2" }
atomr-config           = { path = "../atomr/crates/atomr-config",           version = "0.9.2" }
atomr-macros           = { path = "../atomr/crates/atomr-macros",           version = "0.9.2" }
atomr-testkit          = { path = "../atomr/crates/atomr-testkit",          version = "0.9.2" }
atomr-cluster          = { path = "../atomr/crates/atomr-cluster",          version = "0.9.2" }
atomr-cluster-tools    = { path = "../atomr/crates/atomr-cluster-tools",    version = "0.9.2" }
atomr-cluster-sharding = { path = "../atomr/crates/atomr-cluster-sharding", version = "0.9.2" }
atomr-distributed-data = { path = "../atomr/crates/atomr-distributed-data", version = "0.9.2" }
atomr-streams          = { path = "../atomr/crates/atomr-streams",          version = "0.9.2" }
atomr-persistence      = { path = "../atomr/crates/atomr-persistence",      version = "0.9.2" }
atomr-telemetry        = { path = "../atomr/crates/atomr-telemetry",        version = "0.9.2" }

# Sibling atomr-accel workspace --------------------------------------------
# Backend-agnostic compute acceleration substrate. The umbrella
# `atomr-accel` crate ships only the trait surface — the NVIDIA CUDA
# implementation now lives in `atomr-accel-cuda` (split out in
# atomr-accel v0.3). TensorRT (Phase 8) is in `atomr-accel-tensorrt`,
# and portable blueprints live in `atomr-accel-patterns`.
atomr-accel          = { path = "../atomr-accel/crates/atomr-accel",          version = "0.10.0" }
atomr-accel-cuda     = { path = "../atomr-accel/crates/atomr-accel-cuda",     version = "0.10.0" }
atomr-accel-patterns = { path = "../atomr-accel/crates/atomr-accel-patterns", version = "0.10.0" }
atomr-accel-tensorrt = { path = "../atomr-accel/crates/atomr-accel-tensorrt", version = "0.10.0" }

# Optional GPU/runtime libs
cudarc              = { version = "0.19.4", features = ["cuda-version-from-build-system", "fallback-latest"] }
candle-core         = "0.8"
candle-nn           = "0.8"
candle-transformers = "0.8"
ort                 = { version = "2.0.0-rc.10", default-features = false }
mistralrs           = "0.8"
hf-hub              = { version = "0.3", default-features = false, features = ["tokio"] }

# ONNX Runtime adapter deps
tokenizers   = { version = "0.20", default-features = false, features = ["onig"] }
ndarray      = "0.16"
tokio-stream = "0.1"
rand         = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
half         = "2"
regex        = "1"
tempfile     = "3"

# Internal crates -----------------------------------------------------------
# All publishable crates live under the `atomr-infer-*` namespace.
# Lib names follow `atomr_infer_X` (snake_case of the package name),
# so source code imports them as `use atomr_infer_X::*`.
atomr-infer-core              = { path = "crates/inference-core",              version = "0.8.0" }
atomr-infer-runtime           = { path = "crates/inference-runtime",           version = "0.8.0" }
atomr-infer-python-bridge     = { path = "crates/inference-python-bridge",     version = "0.8.0" }
atomr-infer-remote-core       = { path = "crates/inference-remote-core",       version = "0.8.0" }
atomr-infer-runtime-vllm      = { path = "crates/inference-runtime-vllm",      version = "0.8.0" }
atomr-infer-runtime-tensorrt  = { path = "crates/inference-runtime-tensorrt",  version = "0.8.0" }
atomr-infer-runtime-ort       = { path = "crates/inference-runtime-ort",       version = "0.8.0" }
atomr-infer-runtime-candle    = { path = "crates/inference-runtime-candle",    version = "0.8.0" }
atomr-infer-runtime-cudarc    = { path = "crates/inference-runtime-cudarc",    version = "0.8.0" }
atomr-infer-runtime-mistralrs = { path = "crates/inference-runtime-mistralrs", version = "0.8.0" }
atomr-infer-runtime-openai    = { path = "crates/inference-runtime-openai",    version = "0.8.0" }
atomr-infer-runtime-anthropic = { path = "crates/inference-runtime-anthropic", version = "0.8.0" }
atomr-infer-runtime-gemini    = { path = "crates/inference-runtime-gemini",    version = "0.8.0" }
atomr-infer-runtime-litellm   = { path = "crates/inference-runtime-litellm",   version = "0.8.0" }
atomr-infer-pipeline          = { path = "crates/inference-pipeline",          version = "0.8.0" }
atomr-infer-testkit           = { path = "crates/inference-testkit",           version = "0.8.0" }
atomr-infer                   = { path = "crates/inference",                   version = "0.8.0" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
