[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "atomr-infer"
# Maturin reads the version from the manifest-path crate's Cargo.toml
# (atomr-infer-py-bindings, which inherits via `version.workspace = true`).
# Hardcoding here would freeze the wheel at one number and silently no-op
# every subsequent release through `pypa/gh-action-pypi-publish`'s
# skip-existing.
dynamic = ["version"]
description = "Multi-runtime GPU + remote inference as a supervised actor system on the atomr actor runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "atomr-infer contributors" }]
keywords = [
  "llm",
  "inference",
  "atomr",
  "actor",
  "openai",
  "anthropic",
  "gemini",
  "vllm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage      = "https://github.com/rustakka/atomr-infer"
Repository    = "https://github.com/rustakka/atomr-infer"
Issues        = "https://github.com/rustakka/atomr-infer/issues"
Changelog     = "https://github.com/rustakka/atomr-infer/releases"
Documentation = "https://docs.rs/atomr-infer"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[tool.maturin]
manifest-path = "crates/inference-py-bindings/Cargo.toml"
module-name   = "atomr_infer._native"
python-source = "python"
features      = ["python-extension"]
strip         = true

[tool.pytest.ini_options]
testpaths   = ["python/tests"]
asyncio_mode = "auto"
