[package]
name        = "xtask"
version = "0.2.1"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish     = false
description = "Workspace task runner: build matrices, audit, version bump, 1.0-rc verify gate."

[dependencies]
anyhow = { workspace = true }
clap   = { workspace = true }
