[package]
name = "inference-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default     = []
# Mirrors the rollup's remote-only aggregate so `cargo build -p
# inference-cli --no-default-features --features remote-only` produces
# a binary that compiles no GPU dependencies.
remote-only = ["inference/remote-only"]
all-remote  = ["inference/all-remote", "inference/pipeline"]
default-prod = ["inference/default-prod"]

[dependencies]
inference         = { workspace = true }
inference-core    = { workspace = true }
inference-runtime = { workspace = true }

# The umbrella `rakka` crate is intentionally not pulled in — the CLI
# uses the sub-crates directly so it publishes to crates.io
# independent of the umbrella's release cadence.
rakka-core       = { workspace = true }
rakka-config     = { workspace = true }

clap               = { workspace = true }
tokio              = { workspace = true }
toml               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }

[[bin]]
name = "rakka"
path = "src/main.rs"
