[package]
name = "atomr-infer-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
description            = "atomr-infer serve CLI binary. Boots the actor system, applies project-file [[deployment]] entries, and mounts the gateway."

[features]
default     = []
# Mirrors the rollup's remote-only aggregate so `cargo build -p
# inference-cli --no-default-features --features remote-only` produces
# a binary that compiles no GPU dependencies.
remote-only = ["atomr-infer/remote-only"]
all-remote  = ["atomr-infer/all-remote", "atomr-infer/pipeline"]
default-prod = ["atomr-infer/default-prod"]
# Zero-config Gemma 4 auto-provisioning on `atomr-infer serve`.
gemma-default = ["atomr-infer/gemma-default"]

[dependencies]
atomr-infer         = { workspace = true }
atomr-infer-core    = { workspace = true }
atomr-infer-runtime = { workspace = true }

# The umbrella `atomr` crate is intentionally not pulled in — the CLI
# uses the sub-crates directly so it publishes to crates.io
# independent of the umbrella's release cadence.
atomr-core       = { workspace = true }
atomr-config     = { workspace = true }

clap               = { workspace = true }
tokio              = { workspace = true }
toml               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }

[[bin]]
name = "atomr-infer"
path = "src/main.rs"
