[package]
name                   = "inference-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
documentation          = "https://docs.rs/inference-core"
description            = "Foundation crate for rakka-inference — typed errors, deployment value object, ModelRunner trait, batch primitives."

# Per architecture doc §10.4 the foundation crate's allowed deps are
# serde / thiserror / bytes / secrecy. The doc's §5.4 trait body for
# `ModelRunner` is written `#[async_trait]`; rather than invent a
# bespoke `BoxFuture` trait shape we take the documented exception
# below for `async-trait`. The trait is `Box<dyn ModelRunner>`-shaped
# anyway so the dyn-dispatch cost is identical.
[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
bytes       = { workspace = true }
secrecy     = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
url         = { workspace = true }
chrono      = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
serde_json = { workspace = true }
