[package]
# `inference-core` is squatted on crates.io by an unrelated project; we
# publish under the `atomr-infer-*` namespace and keep the Rust
# import name as `inference_core` via [lib] below so source code in
# both this workspace and consumer crates stays unchanged.
name = "atomr-infer-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
documentation          = "https://docs.rs/atomr-infer-core"
description            = "Foundation crate for atomr-infer — typed errors, deployment value object, ModelRunner trait, batch primitives."

[lib]
name = "atomr_infer_core"
# Per architecture doc §10.4 the foundation crate's allowed deps are
# serde / thiserror / bytes / secrecy. The doc's §5.4 trait body for
# `ModelRunner` is written `#[async_trait]`; rather than invent a
# bespoke `BoxFuture` trait shape we take the documented exception
# below for `async-trait`. The trait is `Box<dyn ModelRunner>`-shaped
# anyway so the dyn-dispatch cost is identical.
[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
bytes       = { workspace = true }
secrecy     = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
url         = { workspace = true }
chrono      = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# `tokio` is admitted here only for `sync::mpsc` — required by the
# realtime / streaming audio types in `audio.rs` whose channels need
# to interop with the actor system in `inference-runtime`. Documented
# exception alongside `async-trait` (see lib.rs header).
tokio       = { workspace = true, features = ["sync"] }

[dev-dependencies]
serde_json = { workspace = true }
proptest   = { workspace = true }
