[package]
name = "atomr-infer-py-bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default          = []
python           = ["dep:pyo3", "dep:tracing"]
# Maturin enables this when building wheels — adds the
# `pyo3/extension-module` linkage so the cdylib loads under CPython.
# Workspace `cargo build` keeps `default = []` so a Python toolchain
# is never required to build the rest of the workspace.
python-extension = ["python", "pyo3/extension-module"]

[lib]
# `_native` matches the maturin `module-name = "atomr_infer._native"`
# convention — the cdylib ships into `atomr_infer/_native.<abi>.so`
# and is re-exported from the pure-Python wrapper.
name        = "_native"
crate-type  = ["rlib", "cdylib"]

[dependencies]
atomr-infer-core = { workspace = true }
pyo3           = { workspace = true, optional = true }
tracing        = { workspace = true, optional = true }
