[package]
name = "atomr-infer-py-bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
description            = "PyO3 bindings for atomr-infer's Cluster + Deployment surface; built into a maturin wheel for the atomr-infer Python package."
# Ships as the single `atomr-infer` PyPI wheel via maturin, not as
# a separate crates.io artifact. Matches atomr's convention for
# py-binding shims and prevents an accidental `cargo publish`.
publish                = false

[features]
default          = []
python           = [
    "dep:pyo3",
    "dep:pyo3-async-runtimes",
    "dep:tokio",
    "dep:futures",
    "dep:futures-util",
    "dep:serde",
    "dep:serde_json",
    "dep:tracing",
    "dep:bytes",
    "dep:url",
    "dep:atomr-infer-testkit",
]
# Maturin enables this when building wheels — adds the
# `pyo3/extension-module` linkage so the cdylib loads under CPython.
# Workspace `cargo build` keeps `default = []` so a Python toolchain
# is never required to build the rest of the workspace.
python-extension = ["python", "pyo3/extension-module"]

[lib]
# `_native` matches the maturin `module-name = "atomr_infer._native"`
# convention — the cdylib ships into `atomr_infer/_native.<abi>.so`
# and is re-exported from the pure-Python wrapper.
name        = "_native"
crate-type  = ["rlib", "cdylib"]

[dependencies]
atomr-infer-core    = { workspace = true }
atomr-infer-testkit = { workspace = true, optional = true }
pyo3                = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }
tokio               = { workspace = true, optional = true }
futures             = { workspace = true, optional = true }
futures-util        = { workspace = true, optional = true }
serde               = { workspace = true, optional = true }
serde_json          = { workspace = true, optional = true }
tracing             = { workspace = true, optional = true }
bytes               = { workspace = true, optional = true }
url                 = { workspace = true, optional = true }
