[package]
name = "inference-python-bridge"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
python  = ["dep:pyo3", "dep:tokio", "dep:parking_lot"]

[dependencies]
inference-core = { workspace = true }
pyo3           = { workspace = true, optional = true }
tokio          = { workspace = true, optional = true }
parking_lot    = { workspace = true, optional = true }
