[package]
name = "atomr-infer-python-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
description            = "Python-resident GPU runtime wiring for atomr-infer. PythonGpuBridge + python-pinned dispatcher used by the vLLM and other GIL-bound runners."

[features]
default = []
python  = ["dep:pyo3", "dep:tokio", "dep:parking_lot"]

[dependencies]
atomr-infer-core = { workspace = true }
pyo3           = { workspace = true, optional = true }
tokio          = { workspace = true, optional = true }
parking_lot    = { workspace = true, optional = true }
